# esp32-music-player

./: .gitignore  OTA_UPDATE_README.md  README.md  analyze_transactions.py  create_release.py  partitions.csv  sdkconfig.defaults  version.json
firmware/display/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/display/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  sunton_esp32_8048s050c.c  uart_comm.c  uart_comm.h  ui_player.c  ui_player.h  ui_songlist.c  ui_songlist.h
firmware/player/: CMakeLists.txt  fix_adf.py  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults
firmware/player/components/soundtouch/: CMakeLists.txt  cpu_detect_stub.cpp  soundtouch_el.cpp  soundtouch_el.h  soundtouch_esp_patch.h
firmware/player/lib/sonic/: SonicStream.h  sonic.h
firmware/player/scripts/: setup_adf.py
firmware/player/src/: CMakeLists.txt  compat.h  dimmerlink.cpp  dimmerlink.h  disp_ota.cpp  disp_ota.h  encoder.cpp  encoder.h  encoder2.cpp  encoder2.h  freertos_psram_task.c  idf_component.yml  index.html  main.cpp  pins.h  potis.cpp  potis.h  song_settings.cpp  song_settings.h  uart_master.cpp  uart_master.h  update.html  web_server.cpp  web_server.h
hardware/: I2S_XLR_Adapter.eprj
hardware/export/: Netlist_P1_2026-05-09.tel
jab5/: JAB5_DSP_HardwareMode_ADDR_F6_2022.12.04_MusicBox.dspproj
main/: CMakeLists.txt  Kconfig.projbuild  about_ui.cpp  about_ui.h  audio_playback.cpp  audio_playback.h  audio_player_ui.cpp  audio_player_ui.h  button_config_ui.cpp  button_config_ui.h  file_manager_ui.cpp  idf_component.yml  main.c  ota_update.cpp  ota_update.h  sunton_esp32_8048s050c.c  sunton_esp32_8048s050c.h  webserver.cpp  webserver.h  wifi_config_ui.cpp
release/: version.json
tools/: generate_sine.py
